[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/weapons/Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Weapons/Knife.gd" type="Script" id=2]
[ext_resource path="res://player_img/throwey/weapons/knife/knife.png" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/Weapons/swoosh_1.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/SFX/Weapons/swoosh_2.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/SFX/Weapons/swoosh_3.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 60.0
height = 120.154

[node name="Knife" instance=ExtResource( 1 )]

gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" parent="." index="2"]

position = Vector2( -1, -1.5 )
scale = Vector2( 0.0634921, 0.174687 )
shape = SubResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Swoosh_1" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -24.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Swoosh_2" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = -24.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Swoosh_3" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = -24.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ContactPoint" parent="." index="6"]

position = Vector2( -0.993341, -21.6902 )
scale = Vector2( 0.215859, 0.177511 )
_sections_unfolded = [ "Transform" ]


